docs-archive/apache-airflow-providers-discord/3.12.3/_sources/_api/airflow/providers/discord/hooks/discord_webhook/index.rst.txt
airflow.providers.discord.hooks.discord_webhook
===============================================

.. py:module:: airflow.providers.discord.hooks.discord_webhook


Classes
-------

.. autoapisummary::

   airflow.providers.discord.hooks.discord_webhook.DiscordCommonHandler
   airflow.providers.discord.hooks.discord_webhook.DiscordWebhookHook
   airflow.providers.discord.hooks.discord_webhook.DiscordWebhookAsyncHook


Module Contents
---------------

.. py:class:: DiscordCommonHandler

   Contains the common functionality.


   .. py:method:: get_webhook_endpoint(conn, webhook_endpoint)

      Return the default webhook endpoint or override if a webhook_endpoint is manually supplied.

      :param conn: Airflow Discord connection
      :param webhook_endpoint: The manually provided webhook endpoint
      :return: Webhook endpoint (str) to use



   .. py:method:: validate_embed(*, embed)

      Validate Discord Embed JSON payload.

      Validates the embed object against Discord limits. See:
          https://discord.com/developers/docs/resources/message#embed-object-embed-limits

      :param embed: Discord embed object.
      :return: Discord embed object.



   .. py:method:: build_discord_payload(*, tts, message, username, avatar_url, embed = None)

      Build a valid Discord JSON payload.

      :param tts: Is a text-to-speech message
      :param message: The message you want to send to your Discord channel
                      (max 2000 characters)
      :param username: Override the default username of the webhook
      :param avatar_url: Override the default avatar of the webhook
      :param embed: Discord embed object.
      :return: Discord payload (str) to send



.. py:class:: DiscordWebhookHook(http_conn_id = None, webhook_endpoint = None, message = '', username = None, avatar_url = None, tts = False, proxy = None, embed = None, *args, **kwargs)

   Bases: :py:obj:`airflow.providers.http.hooks.http.HttpHook`


   This hook allows you to post messages to Discord using incoming webhooks.

   Takes a Discord connection ID with a default relative webhook endpoint. The
   default endpoint can be overridden using the webhook_endpoint parameter
   (https://discordapp.com/developers/docs/resources/webhook).

   Each Discord webhook can be pre-configured to use a specific username and
   avatar_url. You can override these defaults in this hook.

   :param http_conn_id: Http connection ID with host as "https://discord.com/api/" and
                        default webhook endpoint in the extra field in the form of
                        {"webhook_endpoint": "webhooks/{webhook.id}/{webhook.token}"}
   :param webhook_endpoint: Discord webhook endpoint in the form of
                            "webhooks/{webhook.id}/{webhook.token}"
   :param message: The message you want to send to your Discord channel
                   (max 2000 characters)
   :param username: Override the default username of the webhook
   :param avatar_url: Override the default avatar of the webhook
   :param tts: Is a text-to-speech message
   :param proxy: Proxy to use to make the Discord webhook call
   :param embed: Discord embed object.


   .. py:attribute:: conn_name_attr
      :value: 'http_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'discord_default'



   .. py:attribute:: conn_type
      :value: 'discord'



   .. py:attribute:: hook_name
      :value: 'Discord'



   .. py:method:: get_connection_form_widgets()
      :classmethod:


      Return connection widgets to add to Discord connection form.



   .. py:attribute:: handler


   .. py:attribute:: http_conn_id
      :type:  Any
      :value: None



   .. py:attribute:: webhook_endpoint


   .. py:attribute:: message
      :value: ''



   .. py:attribute:: username
      :value: None



   .. py:attribute:: avatar_url
      :value: None



   .. py:attribute:: tts
      :value: False



   .. py:attribute:: proxy
      :value: None



   .. py:attribute:: embed
      :value: None



   .. py:method:: get_conn(headers = None, extra_options = None)

      Create a Requests HTTP session.

      :param headers: Additional headers to be passed through as a dictionary.
      :param extra_options: additional options to be used when executing the request
      :return: A configured requests.Session object.



   .. py:method:: execute()

      Execute the Discord webhook call.



.. py:class:: DiscordWebhookAsyncHook(*, http_conn_id = '', webhook_endpoint = None, message = '', username = None, avatar_url = None, tts = False, proxy = None, embed = None, **kwargs)

   Bases: :py:obj:`airflow.providers.http.hooks.http.HttpAsyncHook`


   This hook allows you to post messages to Discord using incoming webhooks using async HTTP.

   Takes a Discord connection ID with a default relative webhook endpoint. The
   default endpoint can be overridden using the webhook_endpoint parameter
   (https://discordapp.com/developers/docs/resources/webhook).

   Each Discord webhook can be pre-configured to use a specific username and
   avatar_url. You can override these defaults in this hook.

   :param http_conn_id: Http connection ID with host as "https://discord.com/api/" and
                        default webhook endpoint in the extra field in the form of
                        {"webhook_endpoint": "webhooks/{webhook.id}/{webhook.token}"}
   :param webhook_endpoint: Discord webhook endpoint in the form of
                            "webhooks/{webhook.id}/{webhook.token}"
   :param message: The message you want to send to your Discord channel
                   (max 2000 characters)
   :param username: Override the default username of the webhook
   :param avatar_url: Override the default avatar of the webhook
   :param tts: Is a text-to-speech message
   :param proxy: Proxy to use to make the Discord webhook call
   :param embed: Discord embed object.


   .. py:attribute:: default_headers


   .. py:attribute:: conn_name_attr
      :value: 'http_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'discord_default'



   .. py:attribute:: conn_type
      :value: 'discord'



   .. py:attribute:: hook_name
      :value: 'Async Discord'



   .. py:attribute:: http_conn_id
      :value: ''



   .. py:attribute:: webhook_endpoint
      :value: None



   .. py:attribute:: message
      :value: ''



   .. py:attribute:: username
      :value: None



   .. py:attribute:: avatar_url
      :value: None



   .. py:attribute:: tts
      :value: False



   .. py:attribute:: proxy
      :value: None



   .. py:attribute:: embed
      :value: None



   .. py:attribute:: handler


   .. py:method:: execute()
      :async:


      Execute the Discord webhook call.



